<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <modules>
        <module>BillCommon</module>
        <module>BillDirect</module>
        <module>DWC</module>
    </modules>

    <groupId>com.dic.bill</groupId>
    <artifactId>billdirect-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>15</java.version>
        <!-- Spring -->
        <spring-framework.version>5.3.4</spring-framework.version>
        <!-- Test -->
        <junit.version>4.12</junit.version>
        <hibernate.version>5.4.28.Final</hibernate.version>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
        <lombok.version>1.18.20</lombok.version>
    </properties>


</project>
